crates/op-diagram-mermaid/tests/snapshots/fixtures__parses@flowchart-shapes.mmd.snap
---
source: crates/op-diagram-mermaid/tests/fixtures.rs
expression: diagram
input_file: crates/op-diagram-mermaid/tests/fixtures/flowchart-shapes.mmd
---
{
  "kind": "graph",
  "direction": "right",
  "nodes": [
    {
      "id": "rectangle",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "Rectangle"
      ]
    },
    {
      "id": "rounded",
      "shape": {
        "kind": "rounded"
      },
      "label": [
        "Rounded"
      ]
    },
    {
      "id": "stadium",
      "shape": {
        "kind": "stadium"
      },
      "label": [
        "Stadium"
      ]
    },
    {
      "id": "subroutine",
      "shape": {
        "kind": "subroutine"
      },
      "label": [
        "Subroutine"
      ]
    },
    {
      "id": "cylinder",
      "shape": {
        "kind": "cylinder"
      },
      "label": [
        "Cylinder"
      ]
    },
    {
      "id": "circle",
      "shape": {
        "kind": "circle"
      },
      "label": [
        "Circle"
      ]
    },
    {
      "id": "double",
      "shape": {
        "kind": "double_circle"
      },
      "label": [
        "Double circle"
      ]
    },
    {
      "id": "asymmetric",
      "shape": {
        "kind": "asymmetric"
      },
      "label": [
        "Asymmetric"
      ]
    },
    {
      "id": "diamond",
      "shape": {
        "kind": "diamond"
      },
      "label": [
        "Diamond"
      ]
    },
    {
      "id": "hexagon",
      "shape": {
        "kind": "hexagon"
      },
      "label": [
        "Hexagon"
      ]
    },
    {
      "id": "lean_right",
      "shape": {
        "kind": "lean_right"
      },
      "label": [
        "Lean right"
      ]
    },
    {
      "id": "lean_left",
      "shape": {
        "kind": "lean_left"
      },
      "label": [
        "Lean left"
      ]
    },
    {
      "id": "trapezoid",
      "shape": {
        "kind": "trapezoid"
      },
      "label": [
        "Trapezoid"
      ]
    },
    {
      "id": "inverted",
      "shape": {
        "kind": "inverted_trapezoid"
      },
      "label": [
        "Inverted trapezoid"
      ]
    },
    {
      "id": "bare",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "bare"
      ]
    },
    {
      "id": "quoted",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "a ] b; c --> d"
      ]
    },
    {
      "id": "lines",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "one",
        "two",
        "three"
      ]
    },
    {
      "id": "codes",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "\"quoted\" #1 <tag>"
      ]
    }
  ],
  "edges": []
}
